fixed gallery section to be functioning and not overflowing into the footer on mac

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,4 +12,10 @@
     hover:border-[#f7ab0a]/40;
   }
 
+  .constrained-image {
+    max-width: 100%;
+    max-height: 100vh; /* adjust this to your needs */
+    object-fit: contain; /* can be replaced with 'cover' if you want the image to fill the container */
+  }  
+
 }
